--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,5 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-/config/initializers/dev_environment.rb
+# should be uncommented
+# /config/initializers/dev_environment.rb
